--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
     </form> 
     <script>
-      $(window).ready(function(){
+      $(document).ready(function(){
              //addServerSideEventHandler()
              // handle the url query Parameters
              handleQuery();
