--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+     <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-  
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.css">
- 
-<html>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.css">
+       </head>
+
   
   <body>
    <div id='chessboarddiv' class="h-100 col-md-4">
@@ -30,8 +33,6 @@
              handleQuery();
       });
         </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script>
+        
   </body>
 </html>
