--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/oakmac-chessboard@1.0.0/src/chessboard.css">
-       </head>
+          <script src="script.js"></script> 
+     </head>
 
   
   <body>
